# jets

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: aio_mesh.C.E78B982190BACE5D.idx  aio_mesh.h.A2011A19D5B9FAAC.idx  base_matrix.h.6D673AC7FB818E96.idx  base_mesh.h.FBA507AE8AAA5967.idx  base_vector.h.1015A500ECF31B7F.idx  dense_matrix.C.2C9D7221AB42534E.idx  dense_matrix.h.788D10C05A5D7375.idx  dense_vector.C.E86ADA410B6AC902.idx  dense_vector.h.5827D19E8CA9ED04.idx  edge.C.9B5818AC6A4403E5.idx  edge.h.2439CAA906460F2A.idx  elem.C.2E4EB619F9179599.idx  elem.h.7FE5E37FAB8C91D0.idx  elem_type.h.28D8933CD0A9675F.idx  getpot.C.5EBC21DAACECFAD0.idx  getpot.h.E1A388CDA4FB5983.idx  idtypes.h.A947689ED7D4A135.idx  jets.C.C37216D05F323A53.idx  jets.h.141F20E1577C7335.idx  jetsbase.h.B877B574AAE4BF20.idx  jetscfg.h.3096707711EC81A9.idx  jetscomm.C.428FDF2967F42971.idx  jetscomm.h.80B311A427CD77D9.idx  jetsexp.h.C558E2C31C7796B2.idx  linear.system.C.10B47F4446363396.idx  linear_system.h.720F95C304B1C57E.idx  matlab_io.C.285C62F2741DDBB7.idx  matlab_io.h.BF8B94D6FFE606D3.idx  measures.h.5354DD776404CDB1.idx  node.C.82BFD57B10D1E865.idx  node.h.8F33E1E085390CD1.idx  ostream_proxy.h.89909E7BAD58D79C.idx  point.C.4C3CBD0FF00CF6B5.idx  point.h.F194DB21868B56C1.idx  quadrature.h.AA5FF6B420E2F005.idx  quadrature_gauss.C.9790D9725C0573F4.idx  quadrature_gauss.h.66FAA981A6811CE8.idx  quadrature_type.h.6EF9D38DFDCBEADF.idx  test1.C.10C37AC530E3B2AC.idx  tri3.C.498920C475FD0604.idx  (+2 more)
include/common/: dof_obj.h  getpot.h  idtypes.h  jets.h  jetsbase.h  jetscfg.h  jetscomm.h  jetserror.h  jetsexp.h  jetslog.h
include/geo/: edge.h  elem.h  elem_type.h  node.h  point.h  tri3.h
include/integral/: quadrature.h  quadrature_gauss.h  quadrature_type.h
include/mesh/: aio_mesh.h  base_mesh.h  matlab_io.h  matlib_io.h  par_mesh.h
include/numerical/: base_matrix.h  base_vector.h  dense_matrix.h  dense_vector.h
include/parallel/: communicator.h  communicator_impl.inl  data_type.h  jetsinit.h  message_tag.h  mpi_micro.h  parallel_object.h  post_wait_dereference_tag.h  post_wait_work.h  request.h  standard_type.h  standard_type_forward.h  status.h
include/system/: linear_system.h
include/utils/: measures.h  opfunction.h  ostream_proxy.h  semipermanent.h
mesh/matlab_mesh/: tri3_16_18.txt  tri3_21_24.txt
script/mesh/: mesh_tools.py
src/common/: getpot.C  jets.C  jetscomm.C  jetslog.C
src/geo/: edge.C  elem.C  node.C  point.C  tri3.C
src/integral/: quadrature_gauss.C
src/mesh/: aio_mesh.C  matlab_io.C
src/numerical/: dense_matrix.C  dense_vector.C
src/parallel/: communicator.C  jetsinit.C  message_tag.C  request.C
src/system/: linear.system.C
src/utils/: semipermanent.C
test/test1/: CMakeLists.txt  test1.C  u_exact.C
test/test2/: CMakeLists.txt  test2.C
test/test3/: CMakeLists.txt  mpi-test.C
